this is my nav section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traveling Lending Page</title>
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/4dbd0264d4.js" crossorigin="anonymous"></script>
+    <!-- Css file link here -->
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="container">
+        <nav class="navber">
+            <div class="navlogo">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h3> Hero <span class="span">Travel</span> </h3>
+            </div>
+            <div class="nav-option">
+                    <p><span class="span">Home</span></p>
+                    <p>Packages</p>
+                    <p>Testimonial</p>
+                    <p>  Blog</p>
+                    <p>Contact</p>
+            </div>
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
